@@ -5,6 +5,7 @@ core:
 
 === Edge
 
+* Dirk Kelly
 * Oriol Gual
 * Petrik de Heus
 * Gert Goet
